typescript/checker/tests/conformance/statements/for-ofStatements/ES5For-of34.ts.stderr
error: AssignFailed {
    span: Span {
        lo: BytePos(
            97,
        ),
        hi: BytePos(
            104,
        ),
        ctxt: #0,
    },
    left: Lit(
        TsLitType {
            span: Span {
                lo: BytePos(
                    83,
                ),
                hi: BytePos(
                    84,
                ),
                ctxt: #0,
            },
            lit: Number(
                Number {
                    span: Span {
                        lo: BytePos(
                            83,
                        ),
                        hi: BytePos(
                            84,
                        ),
                        ctxt: #0,
                    },
                    value: 0.0,
                },
            ),
        },
    ),
    right: Lit(
        TsLitType {
            span: Span {
                lo: BytePos(
                    109,
                ),
                hi: BytePos(
                    112,
                ),
                ctxt: #0,
            },
            lit: Str(
                Str {
                    span: Span {
                        lo: BytePos(
                            109,
                        ),
                        hi: BytePos(
                            112,
                        ),
                        ctxt: #0,
                    },
                    value: Atom('a' type=inline),
                    has_escape: false,
                },
            ),
        },
    ),
    cause: [],
}
 --> $DIR/tests/conformance/statements/for-ofStatements/ES5For-of34.ts:6:6
  |
6 | for (foo().x of ['a', 'b', 'c']) {
  |      ^^^^^^^

